[package]
name = "mmorpg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
futures = { version = "0.3.25" }
base64 = { version = "0.13.1" }
sha2 = { version = "0.10.6" }
hmac = { version = "0.12.1" }
reqwest = { version = "0.11.13" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }